src/sass/_photo-card.scss
.photo-card-link {
  position: relative;
  display: block;
  text-decoration: none;
  color: #000;
  box-shadow: 0 0px 1px #0000001f, 0 1px 1px #00000024, 0 0px 1px #0003;
  border-radius: 10px;

  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);

  &:nth-child(6n) {
    grid-column: span 2;
    grid-row: span 2;
  }

  &:nth-child(2n) {
    grid-row: span 2;
  }

  &:hover .info {
    opacity: 1;
  }
  &:hover,
  &:visited,
  &:active {
    text-decoration: none;
  }

  &:hover,
  &:focus {
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
      1px 4px 6px rgba(0, 0, 0, 0.16);
  }
}

.photo-card-img {
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}

.info {
  position: absolute;
  bottom: 0;
  left: 50%;
  right: 0;
  width: 100%;
  transform: translateX(-50%);
  display: flex;
  justify-content: space-around;
  gap: 1rem;
  opacity: 0;
  padding: 5px 10% 0;
  background-color: #ffffff95;
  transition: opacity 0.3s ease-in-out, background-color 0.3s ease-in-out;
  border-radius: 3px 3px 0 0;

  &:hover {
    background-color: #fff;
  }

  .info-item {
    display: flex;
    flex-direction: column;
    font-size: 12px;
    align-items: center;
    gap: 5px;
    transition: opacity 0.3s ease-in-out;

    @media screen and (min-width: 425px) {
      font-size: 14px;
    }
  }
}

